fix horizontal scrollbar on profilePage

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,7 +8,6 @@ font-family: 'Seymour One', sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
 }
 
 .App {
