--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -76,7 +76,7 @@
   left: 0;
   height: 4vw;
   background-color: black;
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
